[fix] city main image overlapped navbar

--- a/src/app/components/pages/page-city/page-city.component.scss
+++ b/src/app/components/pages/page-city/page-city.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     >div:nth-of-type(1) {
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
